# half-sword-online

./: .gitignore  README.md  build_client.py  config.json  setup_and_test.py
.github/workflows/: build-client.yml  ci.yml
client/: __main__.py  app.py  audio_player.py  connect_ui.py  lobby_ui.py
host/: adaptive_bitrate.py  audio.py  capture.py  dashboard.py  input_injector.py  requirements.txt  server.py  session_manager.py
mod/FrameExport/: CMakeLists.txt
mod/FrameExport/src/: main.cpp
mod/HalfSwordOnlineMod/scripts/: config.lua  main.lua  team_manager.lua
shared/: fec.py  lobby.py  protocol.py
tests/: test_fec.py  test_lobby.py  test_protocol.py  test_streaming.py
